--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,93 @@
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: #404041;
+}
 
+h1 {
+  text-align: center;
+  font-size: 50pt;
+  line-height: 100px;
+  vertical-align: middle;
+}
+
+.title-number {
+  color: #ED458B;
+  font-family: 'Open Sans:700', sans-serif;
+}
+
+.title-guesser {
+  color: #E6E7E8;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.range-container {
+  display: flex;
+  justify-content: center;
+  height: 100px;
+  vertical-align: middle;
+}
+
+.guess {
+  display: block;
+  margin: auto;
+  opacity: .5;
+}
+
+.guess-container {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+  background-color: #D0D2D3;
+  color: #FFFFFF;
+  border: none;
+  width: 200px;
+  height: 50px;
+  font-size: 20pt;
+  margin: 5px;
+  font-family: 'Open Sans', sans-serif;
+  margin: 20px;
+}
+
+.submit {
+  opacity: .5
+}
+
+.clear {
+  opacity: .5;
+}
+
+.submit-range {
+  text-align: center;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20pt;
+  margin: 20px;
+  text-align: center;
+}
+
+.user-guess {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 90pt;
+  color: #ED458B;
+}
+
+input {
+  width: 450px;
+  height: 50px;
+  font-size: 20pt;
+  margin: 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.reset {
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+  width: 450px;
+  opacity: .5;
+}
