--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,14 @@ h1 {
 
 .title-number {
   color: #ED458B;
-  font-family: 'Open Sans:700', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
 
 .title-guesser {
   color: #E6E7E8;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 
 .range-container {
@@ -49,6 +51,7 @@ button {
   margin: 5px;
   font-family: 'Open Sans', sans-serif;
   margin: 20px;
+  border-radius: 20px;
 }
 
 .submit {
