--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -15,6 +15,24 @@
     margin: 10px;
   }
 
+  .range-container {
+    position: relative;
+    margin-top: 50px;
+  }
+
+  .submit-range {
+    position: absolute;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
   input {
     width: 150px;
     height: 25px;
